[ADD][FIX] Pasando las partes de comunicacion entre sockets como Msg y RequestCodes a librerias externas