@@ -5,10 +5,11 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.net.Socket;
 
+import com.Msg;
+import com.Msg.MsgType;
+import com.RequestCodes;
+
 import api.Request;
-import api.RequestCodes;
-import controller.Msg;
-import controller.Msg.MsgType;
 import controller.Server;
 import log.ClientLog;
 
@@ -24,44 +25,26 @@ public class ClientConnection extends Thread implements RequestCodes {
     private ObjectInputStream ois;
     private ObjectOutputStream oos;
 
-    /**
-     * @return the mId
-     */
     public String getConId() {
         return String.valueOf(mId);
     }
 
-    /**
-     * @param ois the ois to set
-     */
     public void setOis(ObjectInputStream ois) {
         this.ois = ois;
     }
 
-    /**
-     * @param oos the oos to set
-     */
     public void setOos(ObjectOutputStream oos) {
         this.oos = oos;
     }
 
-    /**
-     * @return the ois
-     */
     public ObjectInputStream getOis() {
         return ois;
     }
 
-    /**
-     * @return the oos
-     */
     public ObjectOutputStream getOos() {
         return oos;
     }
 
-    /**
-     * @return the pNick
-     */
     public String getNick() {
         return pNick;
     }
@@ -82,7 +65,7 @@ public class ClientConnection extends Thread implements RequestCodes {
 
     private boolean recievePresentation() {
         Msg presentation = readClientMessage();
-        mId = Thread.currentThread().threadId();
+        mId = Thread.currentThread().getId();
         pNick = presentation.getEmisor();
         if (presentation.getAction().equals(PRESENT)) {
             System.out.println("[" + presentation.getEmisor() + "] IS ACCEPTED");
@@ -95,7 +78,7 @@ public class ClientConnection extends Thread implements RequestCodes {
     private void sendComfirmation() {
         cLog = new ClientLog(this);
         Msg comfirmation = new Msg(MsgType.REQUEST);
-        comfirmation.setAction(PRESENTATION_SUCCES);
+        comfirmation.setAction(INFO_PRESENTATION_SUCCES);
         comfirmation.setReceptor(getConId());
         System.out.println("SENDING COMFIRMATION TO [" + comfirmation.getReceptor() + "]");
         writeClientMessage(comfirmation);
@@ -120,12 +103,14 @@ public class ClientConnection extends Thread implements RequestCodes {
             System.out.println("<==IN" + msg.toString());
             return msg;
         } catch (NullPointerException e) {
+            e.printStackTrace();
             return null;
         } catch (ClassNotFoundException e) {
             e.printStackTrace();
             return null;
         } catch (IOException e) {
             System.err.println("[" + getNick() + "] HAS LEFT");
+            e.printStackTrace();
             return null;
         }
     }
@@ -139,24 +124,22 @@ public class ClientConnection extends Thread implements RequestCodes {
             case SHOW_ALL_MEMBERS:
 
                 break;
-            case SHOW_ALL_ONLINE:
+            case REQ_SHOW_ALL_ONLINE:
                 respond = new Request().showOnlineUsers(this);
                 writeClientMessage(respond);
                 break;
 
-            // REQUEST SINGLE CHAT AS A EMISOR
             case SINGLE_REQUESTED:
                 respond = new Request().askForSingle(getConId(), msg.getReceptor(), msg.getBody());
                 writeClientMessage(respond);
                 break;
 
-            // REQUESTED CHAT AS A RECEPTOR = EMISOR
-            case ALLOW:
+            case REQ_ALLOW:
                 respond = new Request().allowSingleChat(msg.getReceptor(), getConId(), getNick());
                 writeClientMessage(respond);
                 break;
 
-            case DENY:
+            case REQ_DENY:
 
                 break;
 
@@ -197,7 +180,7 @@ public class ClientConnection extends Thread implements RequestCodes {
                     handleRequest(msg);
                 } catch (NullPointerException e) {
                     System.out.println(
-                            CONNECTION_CLOSED + " [" + pNick + "]");
+                            INFO_CONNECTION_CLOSED + " [" + pNick + "]");
                     server.deleteConnection(this);
                     break;
                 }
